# beakerx_widgets

./: .copier-answers.yml  .editorconfig  .gitignore  .prettierignore  .prettierrc  README.md  beakerx.json  configuration.yml  install.json  package.json  pyproject.toml  run_beakerx_python_tests.sh  tsconfig.json  webpack.config.js
.github/workflows/: main.yml
beakerx/: MANIFEST.in  __init__.py  beakerx_autotranslation_server.py  bkr2ipynb.py  commands.py  environment.py  handlers.py  install.py  jupyter_server_handlers.py  kernel_spec.py  runtime.py  setup.py
beakerx/beakerx/: __init__.py
beakerx/beakerx/spark/: sparkex.py
beakerx/forms/: easyforms.py
beakerx/forms/tests/: test_easyforms.py
beakerx/magics/: groovy_magic.py  java_magic.py  jvm_kernel_magic.py  scala_magic.py  sparkex_magic.py
beakerx/outputs/: __init__.py  outputcontainer.py
beakerx/plots/: chart.py  chart_models.py
beakerx/spark/tests/: mocks.py  test_spark_auto_connect.py  test_spark_engine.py  test_spark_listener.py  test_spark_single_session.py
beakerx_widgets/: MANIFEST.in  beakerx-server.json  pyproject.toml  run_beakerx_python_tests.sh  setup.py  setupbase.py
beakerx_widgets/beakerx/: __init__.py  beakerx_server.py  commands.py  handlers.py  install.py  jupyter_server_handlers.py  runtime.py
beakerx_widgets/beakerx/magics/: clojure_magic.py  kernel_runner_magic.py  kotlin_magic.py  sql_magic.py
beakerx_widgets/beakerx/outputs/: outputcontainer.py
beakerx_widgets/beakerx_databrowser/: __init__.py  commands.py
beakerx_widgets/beakerx_magics/: sparkex_magic.py
beakerx_widgets/beakerx_widgets/: __init__.py  beakerx_autotranslation_server.py  commands.py  environment.py  handlers.py  install.py  runtime.py
beakerx_widgets/conda_recipe/: meta.yaml
beakerx_widgets/js/: package.json  tsconfig.json  webpack.config.js
doc/: AutoTranslation.ipynb  CategoryPlot.ipynb  ChartingAPI.ipynb  EasyForm.ipynb  Heatmap.ipynb  Histogram.ipynb  InitCells.ipynb  KernelMagics.ipynb  OutputContainers.ipynb  PlotActions.ipynb  PlotJSAPI.ipynb  PysparkExample.ipynb  ScrollZoom.ipynb  Treemap.ipynb
js/: .eslintrc  package.json  tsconfigbase.json  webpack.config.js
js/notebook/: package.json
js/sass/: beakerx_widgets.scss  beakerx_widgets_lab.scss
js/src/: extension.ts  index-classic.ts  index-embed.ts  jupyterlab-plugin.ts  public-path.ts  tree-extension.ts
js/typings/: globals.d.ts
sass/partials/: beakerx.scss  forms.scss  grid-view.scss
src/: jupyterlab-plugin.ts  tree-extension.ts
src/extension/: UIOptionsHelper.ts  autoTranslation.ts  codeEditor.ts  comm.ts  index.ts  initializationCells.ts
src/lab/: BeakerxWidgetExtension.ts
src/output/: CyclingDisplayBox.ts
src/plots/: plot.ts
src/spark/: Foldout.ts  RESTButton.ts  SparkConfiguration.ts  SparkUI.ts  Spinner.ts
src/utils/: BigNumberUtils.ts  CommonUtils.ts  PlotColorUtils.ts  PlotStyleUtils.ts  PlotUtils.ts  SanitizeUtils.ts
(+417 files in other folders)
