[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "beakerx"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Framework :: IPython",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Multimedia :: Graphics",
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "beakerx_base>=2.0.1",
    "requests",
    "pandas",
    "bottle",
    "pyspark",
    "jupyter-server",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.scripts]
beakerx = "beakerx:run"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["beakerx/labextension", "beakerx/static", "NOTICE", "beakerx.json"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"beakerx/labextension" = "share/jupyter/labextensions/@beakerx/beakerx-widgets"
"beakerx/static" = "share/jupyter/nbextensions/beakerx"
"beakerx.json" = "etc/jupyter/nbconfig/notebook.d/beakerx.json"
"install.json" = "share/jupyter/labextensions/@beakerx/beakerx-widgets/install.json"

[tool.hatch.build.hooks.version]
path = "beakerx/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "beakerx/labextension/static/style.js",
    "beakerx/labextension/package.json",
]
skip-if-exists = ["beakerx/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:labextension"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build:labextension:dev"
npm = ["jlpm"]
source_dir = "src"
build_dir = "beakerx/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install 'jupyterlab>=4.0.0,<5'",
    "jlpm",
    "jlpm build:labextension"
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]
